# juce-course

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: cmake.yml
complete/: CMakeLists.txt  CMakePresets.json
complete/assets/: README.txt
complete/cmake/: cpm.cmake
complete/examples/: CMakeLists.txt  Main.cpp
complete/examples/Coordinates/: CMakeLists.txt  MainComponent.h
complete/examples/GuiAndAudioThreadIdPrinting/: MainComponent.h
complete/examples/GuiThreadIdPrinting/: MainComponent.h
complete/examples/Justifications/: CMakeLists.txt  MainComponent.h
complete/examples/LongRunningTask/: MainComponent.h  MainComponent_solution.h
complete/examples/UserEventHandlers/: MainComponent.h
complete/test/: CMakeLists.txt
complete/test/source/: BypassTransitionSmootherTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TestUtils.h  TremoloTest.cpp
complete/test/source/detail/: StridedQueueTest.cpp
complete/tremolo_plugin/: tremolo_plugin.cpp  tremolo_plugin.h
complete/tremolo_plugin/include/Tremolo/: BypassTransitionSmoother.h  CustomLookAndFeel.h  LfoVisualizer.h  MessageOnClick.h  Parameters.h  PluginEditor.h  PluginProcessor.h  SampleFifo.h  Tremolo.h
complete/tremolo_plugin/include/Tremolo/detail/: StridedQueue.h
complete/tremolo_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  LfoVisualizer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
juce_reaper/: juce.rpp
todo/: CMakeLists.txt  CMakePresets.json
todo/assets/: README.txt
todo/cmake/: CompilerWarnings.cmake
todo/test/: CMakeLists.txt
todo/test/source/: BypassTransitionSmootherTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TestUtils.h  TremoloTest.cpp
todo/tremolo_plugin/: tremolo_plugin.cpp  tremolo_plugin.h
todo/tremolo_plugin/include/Tremolo/: BypassTransitionSmoother.h  CustomLookAndFeel.h  JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  Tremolo.h
todo/tremolo_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
